# FreeCAD

./: .gitignore  CLAUDE.md
Macro/: AIAssistant.py
cMake/FreeCAD_Helpers/: InitializeFreeCADBuildOptions.cmake
pivoting/: PLAN.md  WORKFLOW.md
scripts/structural/: steel_roof_truss.py
src/Gui/: CMakeLists.txt
src/Gui/Icons/: resource.qrc
src/Main/: MainGui.cpp
src/Mod/: CMakeLists.txt
src/Mod/AIAssistant/: AIPanel.py  ActivityLogger.py  ActivityWidget.py  CMakeLists.txt  ChangeWidget.py  ChatWidget.py  ClaudeCodeBackend.py  CodeBlockWidget.py  CodeExecutor.py  ContextBuilder.py  ContextSelectionWidget.py  FREECAD_API.md  Init.py  InitGui.py  LLMBackend.py  MessageDelegate.py  MessageModel.py  PlanWidget.py  PreviewManager.py  PreviewWidget.py  SessionManager.py  SnapshotManager.py  SourceManager.py  StepPreviewWidget.py  Theme.py  __init__.py  project_claude_template.md
src/Mod/AIAssistant/backends/: __init__.py  claude_code.py  http.py
src/Mod/AIAssistant/core/: __init__.py  changes.py  context.py  preview.py  snapshot.py  source.py
src/Mod/AIAssistant/integration/: __init__.py  parts_library.py
src/Mod/AIAssistant/persistence/: __init__.py  activity.py
src/Mod/AIAssistant/widgets/: __init__.py  activity.py  change.py  chat.py  code_block.py  context_selection.py  message_delegate.py  plan.py  preview.py  step_preview.py  syntax.py
src/XDGData/: org.freecad.FreeCAD.desktop
test_projects/: first.FCStd
test_projects/first/: source.py
